--- a/style.css
+++ b/style.css
@@ -122,6 +122,9 @@ nav{
     color: white;
     background-color: hsl(135, 33%, 36%);
 }
+.emergency-title{
+    font-size: 40px;
+}
 .emergency-text{
     width: 80%;
     padding-left: 10%;
@@ -350,6 +353,32 @@ footer{
 /* MEDIA QUERY */
 /* Small mobile (portrait, less than 360px) */
 @media only screen and (max-width: 359px) {
+    .header {
+        display: flex;
+        width: 100%;
+        align-items: center;
+        text-align: center;
+        padding-left: 10px;
+        color: white;
+        /* font-weight: bold; */
+        font-size: 10px;
+        background-color: hsl(135, 33%, 36%);
+    }
+
+    .fa-phone {
+        padding-right: 10px;
+    }
+
+    /* Ensure phone number stays on one line */
+    .phone-number {
+        display: inline-flex; /* Keeps the icon and number on one line */
+        /* align-items: center; Vertically center the content */
+        white-space: nowrap; /* Prevents the text from wrapping */
+        padding-left: 10px;
+    }
+    nav{
+        height: 100px;
+    }
     .logo-div{
         width: 80px;
 
@@ -364,25 +393,36 @@ footer{
         display: inline-block;
     }
     .card{
-        height: 480px;
+        height: 410px;
     }
     
 
 .card-title{
 font-size: 1.5rem;
+
 }
 
 .card-text{
-    font-size: 1rem;
+    font-size: 14px;
+
+}
+.card-btn{ 
+    background-color: hsl(135, 33%, 36%) ;
+    color: white;
+    text-decoration: none;
+    font-size: medium;
+    /* height: 30px; */
+    
 }
 
 .emergency-section{
-    height: 460px;
+    height: 490px;
+    width: 100%;
 }
 
 .emergency-text{
     width: 80%;
-    padding-left: 10%;
+    padding-left: 20%;
     font-size:medium;   
 }
 .emergency-btn{
@@ -390,8 +430,8 @@ font-size: 1.5rem;
     border-radius: 50px;
     background-color: hsl(135, 33%, 36%);
     color: white;
-    width: 180px;
-    height: 30px;
+    width: 190px;
+    height: 50px;
     font-size: medium;
     font-weight: bold;
     transition: 1s;
@@ -431,6 +471,7 @@ font-size: 1.5rem;
     padding-left: 25px;
 
 }
+
 .service-text{
     width: 80%;
     font-size: 16px;
@@ -441,8 +482,9 @@ font-size: 1.5rem;
 }
 .service-section{
     width: 100%;
-    height: 480px;
+    height: 470px;
     padding-top: 60px;
+    padding-left: 30PX;
     color: #FFFFFFE6;
     background-color: hsl(135, 33%, 36%);
     /* align-items: center; */
@@ -465,52 +507,700 @@ font-size: 1.5rem;
     flex-direction: column;
     justify-content: space-evenly;
     width: 100%;
-    height: 2950px;
+    height: 1200px;
     align-items: center;
 }
 .doctor-card{
     width: 80%;
-    height: 350px;
+    height: 360px;
     align-items: center;
     text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 .doctor-title{
     padding-top: 20px;
 }
 footer{
-
+    padding-top: 10%;
     flex-direction: column;
+    width: 100%;
+    height: 957px;
 }
+.left{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.fa-brands{
+    color: hsl(135, 33%, 36%);
+    border: 1px solid hsl(135, 33%, 36%);
+    border-radius: 10px;
+    width: 30px;
+    height: 30px;
+    /* padding-top: 5px; */
+    
+    align-items: center;
+    text-align: center;
+    transition: 0.5s;
+}
+.center{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.right{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;   
+}
+
 }
 
 /* Mobile (portrait, 360px to 480px) */
 @media only screen and (min-width: 360px) and (max-width: 480px) {
-    body {
-        font-size: 15px; /* Slightly larger font for small mobiles */
+    .header {
+        display: flex;
+        width: 100%;
+        align-items: center;
+        text-align: center;
+        padding-left: 50px;
+        color: white;
+        font-weight: bold;
+        background-color: hsl(135, 33%, 36%);
     }
+
+    .fa-phone {
+        padding-right: 10px;
+    }
+
+    /* Ensure phone number stays on one line */
+    .phone-number {
+        display: inline-flex; /* Keeps the icon and number on one line */
+        align-items: center; /* Vertically center the content */
+        white-space: nowrap; /* Prevents the text from wrapping */
+        padding-left: 10px;
+    }
+    nav{
+        height: 100px;
+    }
+    .logo-div{
+        width: 80px;
+
+    }
+    .ancors{
+        display: none;
+    }
+    .nav-sec-logo{
+        display: none;
+    }
+    #hamburger{
+        display: inline-block;
+    }
+    .card{
+        height: 380px;
+    }
+    
+
+.card-title{
+font-size: 1.5rem;
+
+}
+
+.card-text{
+    font-size: 14px;
+
+}
+.card-btn{ 
+    background-color: hsl(135, 33%, 36%) ;
+    color: white;
+    text-decoration: none;
+    font-size: medium;
+    /* height: 30px; */
+    
+}
+
+.emergency-section{
+    height: 430px;
+    width: 100%;
+}
+
+.emergency-text{
+    width: 80%;
+    padding-left: 20%;
+    font-size:large;   
+}
+.emergency-btn{
+    border: 3px  solid white;
+    border-radius: 50px;
+    background-color: hsl(135, 33%, 36%);
+    color: white;
+    width: 180px;
+    height: 40px;
+    font-size: medium;
+    font-weight: bold;
+    transition: 1s;
+}
+
+.counts{
+    width: 100%;
+    height: 900px;
+    padding-top: 60px;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    /* background-color: #626262; */
+}
+.count{
+    width: 80%;
+    height: 200px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* border: 1px solid black; */
+    line-height: 10px;
+}
+.count-flex{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding-right: 100px;
+}
+.count-para{
+    font-size: 18px;
+    font-weight: bold;
+    padding-left: 25px;
+    
+}
+.count-date{
+    font-size: 18px;
+    padding-left: 25px;
+
+}
+
+.service-text{
+    width: 80%;
+    font-size: 16px;
+    color: white;
+    font-weight: 400;
+    padding-left: 10%;
+    padding-top: 20px;
+}
+.service-section{
+    width: 100%;
+    height: 450px;
+    padding-top: 60px;
+    padding-left: 20PX;
+    color: #FFFFFFE6;
+    background-color: hsl(135, 33%, 36%);
+    /* align-items: center; */
+    text-align: center;
+}
+.explore-button{
+    background-color: hsl(135, 33%, 36%);
+    border: 3px solid white;
+    border-radius: 50px;
+    color: white;
+    width: 190px;
+    height: 40px;
+    font-size:medium ;
+    font-weight: bold;
+    margin-top: 20px;
+    margin-right: 20px;
+    transition: 1s;
+}
+.doctors-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 1200px;
+    align-items: center;
+}
+.doctor-card{
+    width: 80%;
+    height: 360px;
+    align-items: center;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.doctor-title{
+    padding-top: 20px;
+}
+footer{
+    padding-top: 10%;
+    flex-direction: column;
+    width: 100%;
+    height: 957px;
+}
+.left{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.fa-brands{
+    color: hsl(135, 33%, 36%);
+    border: 1px solid hsl(135, 33%, 36%);
+    border-radius: 10px;
+    width: 30px;
+    height: 30px;
+    /* padding-top: 5px; */
+    
+    align-items: center;
+    text-align: center;
+    transition: 0.5s;
+}
+.center{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.right{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;   
+}
 }
 
 /* Mobile (landscape, 481px to 767px) */
 @media only screen and (min-width: 481px) and (max-width: 767px) {
-    body {
-        font-size: 16px; /* Adjusted font size for landscape mobiles */
+    .header {
+        display: flex;
+        width: 100%;
+        align-items: center;
+        text-align: center;
+        padding-left: 50px;
+        color: white;
+        font-weight: bold;
+        background-color: hsl(135, 33%, 36%);
     }
+
+    .fa-phone {
+        padding-right: 10px;
+    }
+
+    /* Ensure phone number stays on one line */
+    .phone-number {
+        display: inline-flex; /* Keeps the icon and number on one line */
+        align-items: center; /* Vertically center the content */
+        white-space: nowrap; /* Prevents the text from wrapping */
+        padding-left: 10px;
+    }
+    nav{
+        height: 100px;
+    }
+    .logo-div{
+        width: 80px;
+
+    }
+    .ancors{
+        display: none;
+    }
+    .nav-sec-logo{
+        display: none;
+    }
+    #hamburger{
+        display: inline-block;
+    }
+    .card{
+        height: 380px;
+    }
+    
+
+.card-title{
+font-size: 1.5rem;
+
+}
+
+.card-text{
+    font-size: 14px;
+
+}
+.card-btn{ 
+    background-color: hsl(135, 33%, 36%) ;
+    color: white;
+    text-decoration: none;
+    font-size: medium;
+    /* height: 30px; */
+    
+}
+
+.emergency-section{
+    height: 430px;
+    width: 100%;
+}
+
+.emergency-text{
+    width: 80%;
+    padding-left: 20%;
+    font-size:large;   
+}
+.emergency-btn{
+    border: 3px  solid white;
+    border-radius: 50px;
+    background-color: hsl(135, 33%, 36%);
+    color: white;
+    width: 180px;
+    height: 40px;
+    font-size: medium;
+    font-weight: bold;
+    transition: 1s;
+}
+
+.counts{
+    width: 100%;
+    height: 900px;
+    padding-top: 60px;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    /* background-color: #626262; */
+}
+.count{
+    width: 80%;
+    height: 200px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* border: 1px solid black; */
+    line-height: 10px;
+}
+.count-flex{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding-right: 100px;
+}
+.count-para{
+    font-size: 18px;
+    font-weight: bold;
+    padding-left: 25px;
+    
+}
+.count-date{
+    font-size: 18px;
+    padding-left: 25px;
+
+}
+
+.service-text{
+    width: 80%;
+    font-size: 16px;
+    color: white;
+    font-weight: 400;
+    padding-left: 10%;
+    padding-top: 20px;
+}
+.service-section{
+    width: 100%;
+    height: 10px;
+    padding-top: 60px;
+    padding-left: 20PX;
+    color: #FFFFFFE6;
+    background-color: hsl(135, 33%, 36%);
+    /* align-items: center; */
+    text-align: center;
+}
+.explore-button{
+    background-color: hsl(135, 33%, 36%);
+    border: 3px solid white;
+    border-radius: 50px;
+    color: white;
+    width: 190px;
+    height: 40px;
+    font-size:medium ;
+    font-weight: bold;
+    margin-top: 20px;
+    margin-right: 20px;
+    transition: 1s;
+}
+.doctors-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 1200px;
+    align-items: center;
+}
+.doctor-card{
+    width: 80%;
+    height: 360px;
+    align-items: center;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.doctor-title{
+    padding-top: 20px;
+}
+footer{
+    padding-top: 10%;
+    flex-direction: column;
+    width: 100%;
+    height: 957px;
+}
+.left{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.fa-brands{
+    color: hsl(135, 33%, 36%);
+    border: 1px solid hsl(135, 33%, 36%);
+    border-radius: 10px;
+    width: 30px;
+    height: 30px;
+    /* padding-top: 5px; */
+    
+    align-items: center;
+    text-align: center;
+    transition: 0.5s;
+}
+.center{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.right{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;   
+}
 }
 
 /* Tablet (portrait, 768px to 1023px) */
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
-    body {
-        font-size: 17px; /* Adjust font size for tablets */
+    .header {
+        display: flex;
+        width: 100%;
+        align-items: center;
+        text-align: center;
+        padding-left: 250px;
+        color: white;
+        font-weight: bold;
+        background-color: hsl(135, 33%, 36%);
     }
+
+    .fa-phone {
+        padding-right: 10px;
+    }
+
+    /* Ensure phone number stays on one line */
+    .phone-number {
+        display: inline-flex; /* Keeps the icon and number on one line */
+        align-items: center; /* Vertically center the content */
+        white-space: nowrap; /* Prevents the text from wrapping */
+        padding-left: 10px;
+    }
+    nav{
+        height: 100px;
+    }
+    .logo-div{
+        width: 80px;
+
+    }
+    .ancors{
+        display: none;
+    }
+    .nav-sec-logo{
+        display: none;
+    }
+    #hamburger{
+        display: inline-block;
+    }
+    .card{
+        height: 410px;
+    }
+    
+
+.card-title{
+font-size: 2.5rem;
+
 }
 
-/* Tablet (landscape, 1024px to 1279px) */
-@media only screen and (min-width: 1024px) and (max-width: 1279px) {
-    body {
-        font-size: 18px; /* Slightly larger font for landscape tablets */
-    }
+.card-text{
+    font-size: 20px;
+
 }
+.card-btn{ 
+    background-color: hsl(135, 33%, 36%) ;
+    color: white;
+    text-decoration: none;
+    font-size: medium;
+    /* height: 30px; */
+    
+}
+
+.emergency-section{
+    height: 400px;
+    width: 100%;
+}
+.emergency-title{
+    font-size: 40px;
+}
+
+.emergency-text{
+    width: 80%;
+    padding-left: 20%;
+    padding-top: 30px;
+    font-size: 20px;   
+}
+.emergency-btn{
+    border: 3px  solid white;
+    border-radius: 50px;
+    background-color: hsl(135, 33%, 36%);
+    color: white;
+    width: 200px;
+    height: 50px;
+    font-size: medium;
+    font-weight: bold;
+    transition: 1s;
+}
+
+.counts{
+    width: 100%;
+    height: 900px;
+    padding-top: 60px;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    /* background-color: #626262; */
+}
+.count{
+    width: 80%;
+    height: 200px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* border: 1px solid black; */
+    line-height: 10px;
+}
+.count-flex{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding-left: 150px;
+    /* padding-right: 100px; */
+}
+.count-para{
+    font-size: 20px;
+    font-weight: bold;
+    padding-left: 170px;
+    
+}
+.count-date{
+    font-size: 20px;
+    padding-left: 170px;
+
+}
+.serveces{
+    font-size: xx-large;
+}
+.service-text{
+    width: 80%;
+    font-size: larger;
+    color: white;
+    font-weight: 400;
+    padding-left: 10%;
+    padding-top: 20px;
+}
+.service-section{
+    width: 100%;
+    height: 350px;
+    padding-top: 60px;
+    padding-left: 30PX;
+    color: #FFFFFFE6;
+    background-color: hsl(135, 33%, 36%);
+    /* align-items: center; */
+    text-align: center;
+}
+.explore-button{
+    background-color: hsl(135, 33%, 36%);
+    border: 3px solid white;
+    border-radius: 50px;
+    color: white;
+    width: 190px;
+    height: 50px;
+    font-size:medium ;
+    font-weight: bold;
+    margin-top: 20px;
+    transition: 1s;
+}
+.doctors-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 2000px;
+    align-items: center;
+}
+.doctor-card{
+    width: 80%;
+    height: 600px;
+    align-items: center;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.doc-image{
+    object-fit: cover;
+    object-position: center;
+    height: 500px;
+}
+.doctor-title{
+    padding-top: 20px;
+}
+footer{
+    padding-top: 10%;
+    flex-direction: column;
+    width: 100%;
+    height: 957px;
+    font-size: larger   ;
+}
+.left{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.footer-ancor{
+    font-size: large;
+
+}
+
+.fa-brands{
+    color: hsl(135, 33%, 36%);
+    border: 1px solid hsl(135, 33%, 36%);
+    border-radius: 10px;
+    width: 30px;
+    height: 30px;
+    /* padding-top: 5px; */
+    align-items: center;
+    text-align: center;
+    transition: 0.5s;
+}
+.center{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.right{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;   
+    font-size: large;
+}
+}
+
 
 /* Small desktop (1280px to 1919px) */
 @media only screen and (min-width: 1280px) and (max-width: 1919px) {
