--- a/style.css
+++ b/style.css
@@ -204,9 +204,6 @@ nav{
     height: 4px;
     background-color: hsl(135, 33%, 36%);    
     left: 46%;
-    
-
-
 }
 .service-text{
     width: 80%;
@@ -1201,24 +1198,355 @@ footer{
 }
 }
 
+/* Media Query for Laptops (1024px to 1440px) */
+@media only screen and (min-width: 1024px) and (max-width: 1440px) {
+ /* header */
+ .header{
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 190px;
+    text-align: right;
+    color: white;
+    font-weight: bold;
+    background-color: hsl(135, 33%, 36%) ;
+}
+.fa-phone{
+    padding-right: 10px;
+}
+/* navbar start */
+nav{
+    width: 100%;
+    height: 160px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
 
-/* Small desktop (1280px to 1919px) */
-@media only screen and (min-width: 1280px) and (max-width: 1919px) {
-    body {
-        font-size: 18px; /* Suitable font size for smaller desktops */
-    }
+}
+.ancors{
+    width: 70%;
+    display: flex;
+    justify-content: space-around;
+}
+.nav-ancor{
+    text-decoration: none;
+    color: #626262; 
+    font-size: 15px;
+    font-weight: 500;
+    text-decoration: none;
+    transition: 1s;   
+    position: relative;
 }
 
-/* Large desktop (1920px to 2559px) - Full HD and 2K */
-@media only screen and (min-width: 1920px) and (max-width: 2559px) {
-    body {
-        font-size: 20px; /* Adjust font for larger displays */
-    }
+.nav-ancor::after{
+    content: ''; /* Necessary for the underline effect */
+    display: block;
+    width: 0; /* Start with no width */
+    height: 2px; /* Height of the underline */
+    background: hsl(135, 33%, 36%); /* Color of the underline */
+    transition: width 0.3s ease-out; /* Smooth width transition */
+    position: absolute;
+    left: 50%; /* Start underline from the center */
+    bottom: -5px; /* Position below the text */
+    transform: translateX(-50%); /* Center the underline */
+        }
+.nav-ancor:hover::after{
+    text-decoration: none;
+    width: 100%; /* Expand the underline fully */
+    left: 0; /* Extend the underline to the full width */
+    transform: translateX(0);
+    color: hsl(135, 33%, 36%); 
+
 }
 
-/* Extra large desktop (2560px and above) - 4K and ultrawide screens */
-@media only screen and (min-width: 2560px) {
-    body {
-        font-size: 22px; /* Larger font for 4K screens */
-    }
+#hamburger{
+    display: none;
+}
+
+.offcanvas-body{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    text-align: left;
+}
+/* navbarend */
+
+/* Carousel Start */
+.carousel-img{
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+.card{
+    width: 80%;
+    height: 330px;
+    background: #FFFFFFE6;
+    top: 60%;
+    left: 10%;
+    position: absolute;
+    border-top: 5px solid hsl(135, 33%, 36%);
+}
+.card-title{
+    padding-top: 30px;
+    font-weight: bold;
+    font-size: 40px;
+}
+.card-text{
+    padding-top: 20px;
+    font-size: 20px;
+}
+.card-btn{ 
+    background-color: hsl(135, 33%, 36%) ;
+    color: white;
+    text-decoration: none;
+    font-size: larger;
+    
+}
+.card-btn:hover{
+    color: white;   
+}
+/* carousel end */
+
+/* Emergency Section Start */
+.emergency-section{
+    width: 100%;
+    height: 350px;
+    margin-top: 80px;
+    padding-top: 60px;
+    text-align: center;
+    align-items: center;
+    color: white;
+    background-color: hsl(135, 33%, 36%);
+}
+.emergency-title{
+    font-size: 40px;
+}
+.emergency-text{
+    width: 80%;
+    padding-left: 10%;
+    font-size: larger;   
+}
+.emergency-btn{
+    border: 3px  solid white;
+    border-radius: 50px;
+    background-color: hsl(135, 33%, 36%);
+    color: white;
+    width: 300px;
+    height: 70px;
+    font-size: x-large;
+    font-weight: bold;
+    transition: 1s;
+}
+.emergency-btn:hover{
+    background-color: white;
+    color: hsl(135, 33%, 36%);
+}
+/* Emergency Section End */
+
+/* Counts Section Start */
+.counts{
+    width: 100%;
+    height: 400px;
+    padding-top: 60px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    /* background-color: #626262; */
+}
+.count{
+    width: 20%;
+    height: 200px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* border: 1px solid black; */
+    line-height: 10px;
+}
+.count-flex{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding-right: 100px;
+}
+.purecounter{
+    font-size: 30px;
+}
+.count-para{
+    font-size: 14px;
+    font-weight: bold;
+    padding-left: 25px;
+    
+}
+.count-date{
+    font-size: 18px;
+    padding-left: 25px;
+
+}
+/* Counts Section End */
+
+/* 1 SECTION START */
+.service-div{
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 50px;
+    text-align: center;
+    align-items: center;
+}
+.service-title{
+    font-weight: bold;
+    position: relative;
+/* text-decoration: underline; */
+}
+.service-title::after{
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    width: 8%;
+    height: 4px;
+    background-color: hsl(135, 33%, 36%);    
+    left: 46%;
+}
+.service-text{
+    width: 80%;
+    font-size: 18px;
+    color: white;
+    font-weight: 400;
+    padding-left: 10%;
+    padding-top: 20px;
+}
+.service-section{
+    width: 100%;
+    height: 350px;
+    padding-top: 60px;
+    color: #FFFFFFE6;
+    background-color: hsl(135, 33%, 36%);
+    /* align-items: center; */
+    text-align: center;
+}
+.explore-button{
+    background-color: hsl(135, 33%, 36%);
+    border: 3px solid white;
+    border-radius: 50px;
+    color: white;
+    width: 300px;
+    height: 70px;
+    font-size: x-large ;
+    font-weight: bold;
+    margin-top: 20px;
+    transition: 1s;
+}
+.explore-button:hover{
+    background-color: white;
+    color: hsl(135, 33%, 36%);
+}
+.doctor-div{
+    padding-top: 70px;
+    text-align: center;
+    align-items: center;
+
+}
+/* SERVICE SECTION END */
+
+/* DOCTOR SECTION START */
+.doc-image{
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    object-position: center;
+}
+.doctors-section{
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 650px;
+    align-items: center;
+}
+.doctor-card{
+    width: 25%;
+    height: 400px;
+    align-items: center;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+.doctor-title{
+    padding-top: 20px;
+
+}
+/* DOCTOR SECTION END */   
+
+/* FOOTER SECTION START */
+
+footer{
+    background-color: #f6f6f6;
+    color: gray;
+    width: 100%;
+    height: 600px;
+    align-items: center;
+    display: flex;
+    text-align: left;
+    justify-content: space-around;
+}
+.left{
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.footer-logo{
+    padding-top: 30px;
+}
+.footer-left-span{
+    padding-left: 20px;
+}
+.fa-brands{
+    color: hsl(135, 33%, 36%);
+    border: 1px solid hsl(135, 33%, 36%);
+    border-radius: 10px;
+    width: 30px;
+    height: 30px;
+    padding-top: 5px;
+    align-items: center;
+    text-align: center;
+    transition: 0.5s;
+}
+.fa-brands:hover{
+    background-color: hsl(135, 33%, 36%);
+    color: white;
+    cursor: pointer;
+}
+.center{
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.footer-center-title{
+    color: black;
+    font-weight: 610;
+}
+.footer-ancors{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.footer-ancor{
+    text-decoration: none;
+    color: gray;
+    font-size: large;
+    transition: 1s;
+}
+.footer-ancor:hover{
+    color: hsl(135, 33%, 36%);
+}
+.right{
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;   
+}
+.footer-right-title{
+    color: black;
+    font-weight: 610;
+   
+}
+/* FOOTER SECTION END */
 }
