--- a/tender.css
+++ b/tender.css
@@ -73,8 +73,6 @@ nav{
     flex-direction: column;
     text-align: left;
 }
-
-
 /* navbarend */
 
 .house-job-section{
@@ -102,21 +100,24 @@ nav{
     content: "";
     position: absolute;
     bottom: -10px;
-    width: 15%;
+    width: 14%;
     height: 4px;
     background-color: hsl(135, 33%, 36%);    
-    left: 81%;
+    left: 83%;
 }
-.flex{
+
+.card-grid{
     width: 100%;
-    height: 400px;
+    height: 500px;
+    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
     background-color: #f7fcfc;
-    display: flex;
-    justify-content: space-evenly;
-    padding-top: 60px;
+    padding: 10%;
 }
 .card{
-    width: 20%;
+    width: 100%;
     height: 150px;
     border: none;
     box-shadow: 5px 10px 15px 3px rgba(0, 0, 0, 0.1);
@@ -169,6 +170,7 @@ nav{
 .card-title{
     text-align: center;
     align-items: center;
+    font-weight: bold;
 }
 .flex-ancor{
     text-decoration: none;
@@ -308,7 +310,6 @@ footer{
         background-color: #f7fcfc;
         width: 100%;
         display: flex;
-        flex-direction: column;
         text-align: center;
         align-items: center;
     }
@@ -316,7 +317,7 @@ footer{
         font-weight: bold;
         position: relative;
         text-align: center;
-        padding-left: 30%;
+        padding-left: 35%;
     /* text-decoration: underline; */
     }
     .house-job-title::after{
@@ -326,40 +327,26 @@ footer{
         width: 35%;
         height: 4px;
         background-color: hsl(135, 33%, 36%);    
-        left: 55%;
+        left: 60%;
     }
-    .flex{
+    
+    .card-grid{
         width: 100%;
-        height: 600px;
+        height: 800px;
+        align-items: center;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
         background-color: #f7fcfc;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        padding-top: 60px;
+        padding: 10%;
     }
     .card{
-        width: 80%;
+        width: 100%;
         height: 150px;
-        margin-left: 10%;
         border: none;
         box-shadow: 5px 10px 15px 3px rgba(0, 0, 0, 0.1);
     }
     .fa-bell{
-        color: hsl(135, 33%, 36%);
-        border: 1px solid hsl(135, 33%, 36%);
-        border-radius: 50%;
-        width: 50px;
-        height: 50px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        font-size: 30px;
-        padding-top: 10px;
-        margin-top: 10px;
-        margin-left: 100px;
-    }
-    .bx-news{
         color: hsl(135, 33%, 36%);
         border: 1px solid hsl(135, 33%, 36%);
         border-radius: 50%;
@@ -407,12 +394,10 @@ footer{
     .card-title{
         text-align: center;
         align-items: center;
+        font-weight: bold;
     }
     .flex-ancor{
         text-decoration: none;
-        color: hsl(135, 33%, 36%);
-    }
-    .flex-ancor:hover{
         color: hsl(135, 33%, 36%);
     }
 
@@ -496,7 +481,6 @@ footer{
     #hamburger{
         display: inline-block;
     }
-
     .house-job-section{
         width: 100%;
         height: 200px;
@@ -515,7 +499,7 @@ footer{
         font-weight: bold;
         position: relative;
         text-align: center;
-        padding-left: 30%;
+        padding-left: 35%;
     /* text-decoration: underline; */
     }
     .house-job-title::after{
@@ -525,21 +509,22 @@ footer{
         width: 35%;
         height: 4px;
         background-color: hsl(135, 33%, 36%);    
-        left: 55%;
+        left: 60%;
     }
-    .flex{
+    
+    .card-grid{
         width: 100%;
-        height: 600px;
+        height: 800px;
+        align-items: center;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
         background-color: #f7fcfc;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        padding-top: 60px;
+        padding: 10%;
     }
     .card{
-        width: 80%;
-        height: 130px;
-        margin-left: 10%;
+        width: 100%;
+        height: 150px;
         border: none;
         box-shadow: 5px 10px 15px 3px rgba(0, 0, 0, 0.1);
     }
@@ -556,7 +541,7 @@ footer{
         font-size: 30px;
         padding-top: 10px;
         margin-top: 10px;
-        margin-left: 150px;
+        margin-left: 125px;
     }
     .fa-newspaper{
         color: hsl(135, 33%, 36%);
@@ -571,7 +556,7 @@ footer{
         font-size: 30px;
         padding-top: 10px;
         margin-top: 10px;
-        margin-left: 150px;
+        margin-left: 125px;
     }
     .fa-search{
         color: hsl(135, 33%, 36%);
@@ -586,21 +571,17 @@ footer{
         font-size: 30px;
         padding-top: 10px;
         margin-top: 10px;
-        margin-left: 150px;
+        margin-left: 125px;
     }
     .card-title{
         text-align: center;
         align-items: center;
+        font-weight: bold;
     }
     .flex-ancor{
         text-decoration: none;
         color: hsl(135, 33%, 36%);
     }
-    .flex-ancor:hover{
-        color: hsl(135, 33%, 36%);
-    }
-
-
     footer{
         padding-top: 10%;
         flex-direction: column;
@@ -679,6 +660,107 @@ footer{
     }
     #hamburger{
         display: inline-block;
+    }
+    .house-job-section{
+        width: 100%;
+        height: 200px;
+        background-color: #f7fcfc;
+        align-items: center;
+        text-align: center;
+    }
+    .house-job-container{
+        background-color: #f7fcfc;
+        width: 100%;
+        display: flex;
+        text-align: center;
+        align-items: center;
+    }
+    .house-job-title{
+        font-weight: bold;
+        position: relative;
+        text-align: center;
+        padding-left: 35%;
+    /* text-decoration: underline; */
+    }
+    .house-job-title::after{
+        content: "";
+        position: absolute;
+        bottom: -10px;
+        width: 35%;
+        height: 4px;
+        background-color: hsl(135, 33%, 36%);    
+        left: 60%;
+    }
+    
+    .card-grid{
+        width: 100%;
+        height: 800px;
+        align-items: center;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+        background-color: #f7fcfc;
+        padding: 10%;
+    }
+    .card{
+        width: 100%;
+        height: 150px;
+        border: none;
+        box-shadow: 5px 10px 15px 3px rgba(0, 0, 0, 0.1);
+    }
+    .fa-bell{
+        color: hsl(135, 33%, 36%);
+        border: 1px solid hsl(135, 33%, 36%);
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 30px;
+        padding-top: 10px;
+        margin-top: 10px;
+        margin-left: 125px;
+    }
+    .fa-newspaper{
+        color: hsl(135, 33%, 36%);
+        border: 1px solid hsl(135, 33%, 36%);
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 30px;
+        padding-top: 10px;
+        margin-top: 10px;
+        margin-left: 125px;
+    }
+    .fa-search{
+        color: hsl(135, 33%, 36%);
+        border: 1px solid hsl(135, 33%, 36%);
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 30px;
+        padding-top: 10px;
+        margin-top: 10px;
+        margin-left: 125px;
+    }
+    .card-title{
+        text-align: center;
+        align-items: center;
+        font-weight: bold;
+    }
+    .flex-ancor{
+        text-decoration: none;
+        color: hsl(135, 33%, 36%);
     }
     footer{
         padding-top: 10%;
@@ -777,32 +859,32 @@ footer{
         font-weight: bold;
         position: relative;
         text-align: center;
-        padding-left: 40%;
+        padding-left: 45%;
     /* text-decoration: underline; */
     }
     .house-job-title::after{
         content: "";
         position: absolute;
         bottom: -10px;
-        width: 25%;
+        width: 16%;
         height: 4px;
         background-color: hsl(135, 33%, 36%);    
-        left: 70%;
+        left: 80%;
     }
-    .flex{
+    
+    .card-grid{
         width: 100%;
         height: 500px;
+        align-items: center;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
         background-color: #f7fcfc;
-        display: grid;                    /* Use CSS Grid */
-        grid-template-columns: repeat(2, 1fr); 
-        flex-direction: column;
-        justify-content: space-evenly;
-        padding-top: 60px;
+        padding: 10%;
     }
     .card{
-        width: 80%;
-        height: 130px;
-        margin-left: 10%;
+        width: 100%;
+        height: 150px;
         border: none;
         box-shadow: 5px 10px 15px 3px rgba(0, 0, 0, 0.1);
     }
@@ -854,12 +936,10 @@ footer{
     .card-title{
         text-align: center;
         align-items: center;
+        font-weight: bold;
     }
     .flex-ancor{
         text-decoration: none;
-        color: hsl(135, 33%, 36%);
-    }
-    .flex-ancor:hover{
         color: hsl(135, 33%, 36%);
     }
     footer{
@@ -972,6 +1052,108 @@ footer{
    #hamburger{
        display: none;
    }
+
+   .house-job-section{
+    width: 100%;
+    height: 200px;
+    background-color: #f7fcfc;
+    align-items: center;
+    text-align: center;
+}
+.house-job-container{
+    background-color: #f7fcfc;
+    width: 100%;
+    display: flex;
+    text-align: center;
+    align-items: center;
+}
+.house-job-title{
+    font-weight: bold;
+    position: relative;
+    text-align: center;
+    padding-left: 45%;
+/* text-decoration: underline; */
+}
+.house-job-title::after{
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    width: 14%;
+    height: 4px;
+    background-color: hsl(135, 33%, 36%);    
+    left: 83%;
+}
+
+.card-grid{
+    width: 100%;
+    height: 500px;
+    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    background-color: #f7fcfc;
+    padding: 10%;
+}
+.card{
+    width: 100%;
+    height: 150px;
+    border: none;
+    box-shadow: 5px 10px 15px 3px rgba(0, 0, 0, 0.1);
+}
+.fa-bell{
+    color: hsl(135, 33%, 36%);
+    border: 1px solid hsl(135, 33%, 36%);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 10px;
+    margin-top: 10px;
+    margin-left: 100px;
+}
+.fa-newspaper{
+    color: hsl(135, 33%, 36%);
+    border: 1px solid hsl(135, 33%, 36%);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 10px;
+    margin-top: 10px;
+    margin-left: 100px;
+}
+.fa-search{
+    color: hsl(135, 33%, 36%);
+    border: 1px solid hsl(135, 33%, 36%);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 10px;
+    margin-top: 10px;
+    margin-left: 100px;
+}
+.card-title{
+    text-align: center;
+    align-items: center;
+    font-weight: bold;
+}
+.flex-ancor{
+    text-decoration: none;
+    color: hsl(135, 33%, 36%);
+}
    /* FOOTER SECTION START */
 
 footer{
